# ETS2-Mod-Sync

./: .gitignore  LICENSE  Makefile  README.md  decryptor.py  gui.py  main.py  mod_sync.py  modlist_xml.py  pyproject.toml  resources.qrc  sii_parser.py  version.py
.github/workflows/: build.yaml
core/: decryptor.py  mod_sync.py  modlist_xml.py  version.py
core/types/: __init__.py  base.py  detect.py  json.py  signatures.py  sii.py  txt.py  xml.py
decryptor/: Cargo.toml  pyproject.toml
decryptor/src/: lib.rs  main.rs
decryptor/src/decoder/: bsii_decoder.rs  bsii_serializer.rs  load_data_block.rs  mod.rs
decryptor/src/strucs/: data_sii.rs  float_vector.rs  mod.rs  sii_types.rs
decryptor/src/utils/: aes.rs  decode_utils.rs  file_type.rs  mod.rs  serialize.rs  zlib.rs
gui/: main_window.py  resources.qrc  resources_rc.py
gui/dialogs/: about_dialog.py  about_dialog_ui.py  settings_dialog.py  settings_dialog_ui.py
gui/mainwindow/: mainwindow.py  mainwindow_ui.py
