[package]
name = "decrypt_truck"
version = "1.3.6"
edition = "2024"
description = "Fast library to decrypt game saves on ETS2 and ATS"
license = "MIT"
authors = ["SiberianCoffe <siberiancoffe@outlook.cl>"]
repository = "https://github.com/CoffeSiberian/DecryptTruck"
homepage = "https://github.com/CoffeSiberian/DecryptTruck"
readme = "README.md"

[lib]
name = "decrypt_truck"
path = "src/lib.rs"

[[bin]]
name = "decrypt_truck"
path = "src/main.rs"

[features]
bin_decrypt_truck = []

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["block-padding"] }
flate2 = "1.1.5"
itoa = "1.0.17"
rayon = "1.11.0"

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
